--- a/index.html
+++ b/index.html
@@ -119,15 +119,16 @@
     </div>
     <div class="terminal-body"> <br>
       <div class="prompt">$ Eddie Berman. Space Cowboy, Dandy Guy, and JWST Whisperer.</div>
-      <br><div class="input">News</div> 
+      <br><div class="input">News<!-- <a href="old_news.html" style="color: #33ff33;">(See Older)</a>--></div> 
       <div class="prompt">&gt; (04/23/24) Joining the Network Science Institute as a Research Co-op</div> 
       <div class="prompt">&gt; (03/19/24) Gave an invited talk at Columbia University! Thank you <a href="http://user.astro.columbia.edu/~frits/Frits.html" target="_blank" style="color: #33ff33;">Frits</a> for hosting :)</div> 
-      <div class="prompt">&gt; <a href="old_news.html" style="color: #33ff33;">Older News</a></div> 
       <!--<div class="prompt">&gt; (01/08/24) Awarded the PEAK Summit Research Award ($3,000)</div> -->
       <br><div class="input">Links</div> 
       <div class="prompt">&gt; <a href="Berman_Edward_CV_Website.pdf" target="_blank" style="color: #33ff33;">CV</a>, <a href="https://scholar.google.com/citations?user=rMjtDxQAAAAJ&hl=en&authuser=2" target="_blank" style="color: #33ff33;">Google Scholar</a>, <a href="https://github.com/EdwardBerman" target="_blank" style="color: #33ff33;">GitHub</a>, <a href="newHeadshotMain.jpg" target="_blank" style="color: #33ff33;">Headshot</a>, <a href="https://github.com/EdwardBerman/eddies-dotfiles---See-You-Space-Cowboy" target="_blank" style="color: #33ff33;">Dotfiles</a> <!--<a href="courses.html" target="_blank" style="color: #33ff33;">Coursework</a> --></div> 
-      <br><div class="input">Writing</div> 
-      <div class="prompt">&gt; <a href="blog.html" style="color: #33ff33;">Articles & Blogs</a></div> 
+<!--      <br><div class="input">Select Papers</div> 
+<div class="prompt">&gt; Berman et al. Efficient PSF Modeling with ShOpt.jl: A PSF Benchmarking Study with JWST NIRCam Imaging. <a href="https://arxiv.org/abs/2401.11625" target="_blank" style="color: #33ff33;">Link</a></div> -->
+<!--      <br><div class="input">Writing</div> 
+<div class="prompt">&gt; <a href="blog.html" style="color: #33ff33;">Articles & Blogs</a></div>--> 
       <!--      <div class="prompt">&gt; <a href="music_page.html" style="color: #33ff33;">Music Reviews</a></div> --> 
 
       <br><div class="input">Contact me</div> 
@@ -141,35 +142,6 @@
 -->    </div>
 <a href="ascii-art.txt"></a>
      </div>
-        <!--<button id="showAsciiBtn" style="text-decoration: underline;">Double Click to See JWST PSF</button>
-      <div class="input">berman [dot] ed [at] northeastern [dot] edu</div>
-        <div id="asciiArt"> 
-        <br> 
-@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@<br>
-@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@<br>
-@@@@@@@@@@@@%#@@@@@@@@@@@@@@@@@@@@@@@@@%@@@@%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@<br>
-@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@#@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@<br>
-@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@#@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@<br>
-@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@<br>
-@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@<br>
-@@@@@@@@@@@@@@@@@@@@@@@@@@%%@@@@@@@@@@@@@@@@*%@@@@@@@@@@@@@@@%%@@@@@@@@@@@@@@@@@@@@@@@@@@@<br>
-@@@@@@@@@@@@@@@@@@@%%@@@@@@@%%%%@@@@@@@@@@@@+%@@@@@@@@@@@@%%%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@<br>
-@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@%###@@@@@@@@@+#@@@@@@@@%##%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@<br>
-@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@#**#%@@%#-+#%%%%***%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@<br>
-@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@%#+===-.:-===+%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@<br>
-@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@%##*-......-*#%%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@<br>
-@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@%*-......-*%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@<br>
-@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@#*+*#*+:-+*#*++#@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@<br>
-@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@###%@@@@@%=+%@@@@@%**#%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@<br>
-@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@%##@@@@@@@@@@**@@@@@@@@@@%##%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@<br>
-@@@@@@@@@@@@@@@@@@@@@@@@@@@@%%%@@@@@@@@@@@@@*#@@@@@@@@@@@@@@%%%@@@@@@@@@@@@@@@@@@@@@@@@@@@<br>
-@@@@@@@@@@@@@@@@@@@@@@@@@%%@@@@@@@@@@@@@@@@@##@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@<br>
-@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@##@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@<br>
-@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@%#@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@<br>
-@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@%#@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@<br>
-@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@%%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@<br>
-@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@**@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@<br>
-@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@%@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@<br> -->
       </div>
     </div>
   </div>
