--- a/about.html
+++ b/about.html
@@ -118,7 +118,7 @@
   <div class="terminal">
     <div class="terminal-body"> 
       <div class="prompt">$ Eddie Berman / About <a href="index.html" style="color: #ff3333;">   (Back)</a></div><br>
-      <div class="prompt">Differentiable programming, geometric deep learning, Julia, and cosmology (mostly weak lensing systematics). Playing with the James Webb Space Telescope.
+      <div class="prompt">Differentiable programming, computational imaging, geometric deep learning, Julia, and cosmology (mostly weak lensing systematics). Playing with the James Webb Space Telescope. <br>
    </div>
 
 <img src="silly.png" alt="alt_astro_out.png" style="display: block; margin: auto; border-radius: 50%; width: 500px; height: 500px; object-fit: cover;">
