--- a/about.html
+++ b/about.html
@@ -118,7 +118,7 @@
   <div class="terminal">
     <div class="terminal-body"> 
       <div class="prompt">$ Eddie Berman / About <a href="index.html" style="color: #ff3333;">   (Back)</a></div><br>
-      <div class="prompt">Differentiable programming, computational imaging, geometric deep learning, Julia, and cosmology (mostly weak lensing systematics). Playing with the James Webb Space Telescope. <br>
+      <div class="prompt">My main interests are in Optics + Computer Vision. How can we embed inductive biasses from physics into computer vision problems? Similarly, how can we use techniques from computer vision to solve problems in astronomical imaging? I also like to dabble with statistical and deep learning methods, working at the forefront of equivariant machine learning, differentiable programming, and the Julia programming langauge.<br>
    </div>
 
 <img src="silly.png" alt="alt_astro_out.png" style="display: block; margin: auto; border-radius: 50%; width: 500px; height: 500px; object-fit: cover;">
