--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       <div class="prompt">&gt; <a href="about.html" style="color: #ff3333;">About</a>, <a href="publications.html" style="color: #ff3333;">Publications</a>, <a href="https://scholar.google.com/citations?user=rMjtDxQAAAAJ&hl=en&authuser=2" target="_blank" style="color: #ff3333;">Google Scholar</a>, <a href="https://github.com/EdwardBerman" target="_blank" style="color: #ff3333;">GitHub</a> </div> 
       <br><div class="input">Coordinates</div> 
       <div class="input">&gt; email: f(berman,  ed, northeastern) where f(x,y,z) = x.y@z.edu</div> 
-      <div class="input">&gt; Geometric Learning Lab, Northeastern University</div> 
+      <div class="input">&gt; Geometric Learning Lab and McCleary's Group, Northeastern University</div> 
     </div>
 <a href="ascii-art.txt"></a>
      </div>
