--- a/about.html
+++ b/about.html
@@ -118,9 +118,9 @@
   <div class="terminal">
     <div class="terminal-body"> 
       <div class="prompt">$ Eddie Berman / About <a href="index.html" style="color: #ff3333;">   (Back)</a></div><br>
-      <div class="prompt">My main interests are at the intersection of Optics, Computer Vision, and Astronomy. Specifically, how can we embed inductive biases from optical physics into computer vision problems? Similarly, how can we use techniques from computer vision to solve problems in astronomical imaging? I am of course also interested in problems that fall strictly within one of those three domains. I am especially interested in problems at the forefront of equivariant machine learning, differentiable programming, and/or computational imaging.<br> <br>
+      <div class="prompt">My main interests are at the intersection of Optics, Computer Vision, and Astronomy. I am especially interested in problems at the forefront of equivariant machine learning, differentiable programming, and/or computational imaging.<br> <br>
 
-        I am advised by Professor Jacqueline McCleary in the department of Physics at Northeastern University as well as Professor Robin Walters in Northeastern's Khoury College of Computer Science <a href="https://www.robinwalters.com/" style="color: #ff3333;">Geometric Learning Lab</a>. This summer I will be visiting with the AstroAI group at the CfA.<br> <br>
+        I am advised by Professor Jacqueline McCleary in the department of Physics at Northeastern University as well as Professor Robin Walters in Northeastern's Khoury College of Computer Science <a href="https://www.robinwalters.com/" style="color: #ff3333;">Geometric Learning Lab</a>. This summer I will be visiting with the AstroAI group at the Center for Astrophysics Harvard and Smithsonian.<br> <br>
 
  For an up-to-date reading list, go <a href="list.html" style="color: #ff3333;">here</a>, and paper plane me your thoughts :D <br> <br>
       </div> 
