--- a/about.html
+++ b/about.html
@@ -120,7 +120,7 @@
       <div class="prompt">$ Eddie Berman / About <a href="index.html" style="color: #ff3333;">   (Back)</a></div><br>
       <div class="prompt">My main interests are at the intersection of Optics, Computer Vision, and Astronomy. I am especially interested in equivariant machine learning and computational imaging.<br> <br>
 
-        I am advised by Professor Jacqueline McCleary in the department of Physics at Northeastern University as well as Professor Robin Walters in Northeastern's Khoury College of Computer Science <a href="https://www.robinwalters.com/" style="color: #ff3333;">Geometric Learning Lab</a>. This summer I will be visiting with the AstroAI group at the Center for Astrophysics Harvard and Smithsonian.<br> <br>
+        I am advised by Professor Jacqueline McCleary with the Northeastern University Cosmology Group as well as Professor Robin Walters with the <a href="https://www.robinwalters.com/" style="color: #ff3333;">Geometric Learning Lab</a>. This summer I will be visiting with the AstroAI group at the Center for Astrophysics Harvard and Smithsonian with Cecilia Garraffo.<br> <br>
 
  For an up-to-date reading list, go <a href="list.html" style="color: #ff3333;">here</a>, and paper plane me your thoughts :D <br> <br>
       </div> 
